// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lib FOE Compute Process Compute Valid Value 1`] = `
Object {
  "bonusUbq": 45,
  "bp": 8,
  "coinSupplyReturn": Array [
    Object {
      "coin": 62500,
      "supply": 62500,
    },
    Object {
      "coin": 25500,
      "supply": 25500,
    },
    Object {
      "coin": 4000,
      "supply": 4000,
    },
  ],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 0,
  "fp": 40,
  "goods": 533,
  "infinityGenerator": false,
  "medals": 200,
  "secondRqCompleted": 0,
  "totalFp": 40,
  "totalGoods": 533,
  "totalRqCompleted": 115,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with infinite generator with 0 cumulative quests 1`] = `
Object {
  "bonusUbq": 56,
  "bp": 6,
  "coinSupplyReturn": Array [
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
  ],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 3,
  "fp": 30,
  "goods": 840,
  "infinityGenerator": true,
  "medals": 336,
  "secondRqCompleted": 0,
  "totalFp": 30,
  "totalGoods": 840,
  "totalRqCompleted": 86,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with infinite generator with 14 cumulative quests 1`] = `
Object {
  "bonusUbq": 392,
  "bp": 30,
  "coinSupplyReturn": Array [
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
  ],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 0,
  "fp": 150,
  "goods": 4200,
  "infinityGenerator": true,
  "medals": 1680,
  "secondRqCompleted": 0,
  "totalFp": 150,
  "totalGoods": 4200,
  "totalRqCompleted": 422,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with second RQ and  1`] = `
Object {
  "bonusUbq": 2954,
  "bp": 360,
  "coinSupplyReturn": Array [
    Object {
      "coin": 50384600,
      "supply": 54533920,
    },
    Object {
      "coin": 34158300,
      "supply": 49492900,
    },
    Object {
      "coin": 23503200,
      "supply": 46454380,
    },
    Object {
      "coin": 15854200.000000002,
      "supply": 44018320,
    },
    Object {
      "coin": 10643000.000000002,
      "supply": 42315820,
    },
    Object {
      "coin": 6972600.000000002,
      "supply": 40987740,
    },
    Object {
      "coin": 4590500.000000002,
      "supply": 40128560,
    },
    Object {
      "coin": 2811000.000000002,
      "supply": 39338900,
    },
    Object {
      "coin": 1758400.0000000019,
      "supply": 38894380,
    },
    Object {
      "coin": 917100.0000000019,
      "supply": 38409620,
    },
    Object {
      "coin": 221500.00000000186,
      "supply": 37874240,
    },
    Object {
      "coin": 41500.00000000186,
      "supply": 37724240,
    },
  ],
  "dailyUbq": 666,
  "defaultCumulativeQuest": 0,
  "fp": 1800,
  "goods": 91851,
  "infinityGenerator": false,
  "medals": 1011960,
  "secondRqCompleted": 1381,
  "totalFp": 2042,
  "totalGoods": 91974,
  "totalRqCompleted": 5043,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value 1`] = `
Object {
  "cost": 510,
  "investment": Array [
    Object {
      "cumulativeInvestment": 455,
      "expectedParticipation": 55,
      "isInvestorParticipation": false,
      "participation": 55,
      "preparation": 400,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -200,
      },
    },
    Object {
      "cumulativeInvestment": 485,
      "expectedParticipation": 30,
      "isInvestorParticipation": false,
      "participation": 30,
      "preparation": 400,
      "reward": 30,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -225,
      },
    },
    Object {
      "cumulativeInvestment": 500,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 405,
      "reward": 10,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -245,
      },
    },
    Object {
      "cumulativeInvestment": 505,
      "expectedParticipation": 5,
      "isInvestorParticipation": false,
      "participation": 5,
      "preparation": 405,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -250,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 410,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 410,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Arc 36 -> 37, with one investor 1`] = `
Object {
  "cost": 1890,
  "investment": Array [
    Object {
      "cumulativeInvestment": 972,
      "expectedParticipation": 972,
      "isInvestorParticipation": true,
      "participation": 972,
      "preparation": 0,
      "reward": 540,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1458,
      "expectedParticipation": 486,
      "isInvestorParticipation": false,
      "participation": 486,
      "preparation": 0,
      "reward": 270,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": 54,
      },
    },
    Object {
      "cumulativeInvestment": 1728,
      "expectedParticipation": 162,
      "isInvestorParticipation": false,
      "participation": 162,
      "preparation": 108,
      "reward": 90,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -288,
      },
    },
    Object {
      "cumulativeInvestment": 1845,
      "expectedParticipation": 45,
      "isInvestorParticipation": false,
      "participation": 45,
      "preparation": 180,
      "reward": 25,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -411,
      },
    },
    Object {
      "cumulativeInvestment": 1881,
      "expectedParticipation": 9,
      "isInvestorParticipation": false,
      "participation": 9,
      "preparation": 207,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -449,
      },
    },
  ],
  "level": 37,
  "otherInvestment": Array [],
  "totalPreparations": 216,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Cap 9 -> 10, extra investors 1`] = `
Object {
  "cost": 880,
  "investment": Array [
    Object {
      "cumulativeInvestment": 699,
      "expectedParticipation": 181,
      "isInvestorParticipation": false,
      "participation": 181,
      "preparation": 518,
      "reward": 95,
      "roi": 0,
      "snipe": Object {
        "fp": 355,
        "roi": -260,
      },
    },
    Object {
      "cumulativeInvestment": 869,
      "expectedParticipation": 95,
      "isInvestorParticipation": true,
      "participation": 170,
      "preparation": 518,
      "reward": 50,
      "roi": -75,
      "snipe": Object {
        "fp": 355,
        "roi": -305,
      },
    },
    Object {
      "cumulativeInvestment": 964,
      "expectedParticipation": 29,
      "isInvestorParticipation": true,
      "participation": 95,
      "preparation": 518,
      "reward": 15,
      "roi": -66,
      "snipe": Object {
        "fp": 318,
        "roi": -303,
      },
    },
    Object {
      "expectedParticipation": 10,
      "isInvestorParticipation": true,
      "participation": 70,
      "preparation": 359,
      "reward": 5,
      "roi": -60,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 2,
      "preparation": 359,
      "reward": 0,
      "roi": -2,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 359,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Cap 26 -> 27, owner start to secure 1`] = `
Object {
  "cost": 1340,
  "investment": Array [
    Object {
      "cumulativeInvestment": 732,
      "expectedParticipation": 608,
      "isInvestorParticipation": false,
      "participation": 608,
      "preparation": 124,
      "reward": 320,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -312,
      },
    },
    Object {
      "cumulativeInvestment": 1036,
      "expectedParticipation": 304,
      "isInvestorParticipation": false,
      "participation": 304,
      "preparation": 124,
      "reward": 160,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -472,
      },
    },
    Object {
      "cumulativeInvestment": 1235,
      "expectedParticipation": 105,
      "isInvestorParticipation": false,
      "participation": 105,
      "preparation": 218,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -577,
      },
    },
    Object {
      "cumulativeInvestment": 1311,
      "expectedParticipation": 29,
      "isInvestorParticipation": false,
      "participation": 29,
      "preparation": 265,
      "reward": 15,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -617,
      },
    },
    Object {
      "cumulativeInvestment": 1330,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 274,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -627,
      },
    },
  ],
  "level": 27,
  "otherInvestment": Array [],
  "totalPreparations": 284,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with extra investors (2 snip for P1 and P2) 1`] = `
Object {
  "cost": 2138,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1069,
      "expectedParticipation": 1197,
      "isInvestorParticipation": true,
      "participation": 1069,
      "preparation": 0,
      "reward": 630,
      "roi": 128,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1606,
      "expectedParticipation": 599,
      "isInvestorParticipation": true,
      "participation": 537,
      "preparation": 0,
      "reward": 315,
      "roi": 62,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1938,
      "expectedParticipation": 200,
      "isInvestorParticipation": false,
      "participation": 200,
      "preparation": 132,
      "reward": 105,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -161,
      },
    },
    Object {
      "cumulativeInvestment": 2090,
      "expectedParticipation": 48,
      "isInvestorParticipation": false,
      "participation": 48,
      "preparation": 236,
      "reward": 25,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -241,
      },
    },
    Object {
      "cumulativeInvestment": 2128,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 264,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -261,
      },
    },
  ],
  "level": 42,
  "otherInvestment": Array [],
  "totalPreparations": 274,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with extra investors 1`] = `
Object {
  "cost": 2741,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1473,
      "expectedParticipation": 1473,
      "isInvestorParticipation": false,
      "participation": 1473,
      "preparation": 0,
      "reward": 775,
      "roi": 0,
      "snipe": Object {
        "fp": 1370,
        "roi": -595,
      },
    },
    Object {
      "cumulativeInvestment": 2214,
      "expectedParticipation": 741,
      "isInvestorParticipation": false,
      "participation": 741,
      "preparation": 0,
      "reward": 390,
      "roi": 0,
      "snipe": Object {
        "fp": 1370,
        "roi": -980,
      },
    },
    Object {
      "cumulativeInvestment": 2494,
      "expectedParticipation": 247,
      "isInvestorParticipation": false,
      "participation": 247,
      "preparation": 33,
      "reward": 130,
      "roi": 0,
      "snipe": Object {
        "fp": 1370,
        "roi": -1240,
      },
    },
    Object {
      "cumulativeInvestment": 2666,
      "expectedParticipation": 67,
      "isInvestorParticipation": true,
      "participation": 75,
      "preparation": 130,
      "reward": 35,
      "roi": -8,
      "snipe": Object {
        "fp": 1370,
        "roi": -1335,
      },
    },
    Object {
      "cumulativeInvestment": 2731,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 185,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 1333,
        "roi": -1328,
      },
    },
  ],
  "level": 56,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 193,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with investor that secure place 1`] = `
Object {
  "cost": 1073,
  "investment": Array [
    Object {
      "cumulativeInvestment": 573,
      "expectedParticipation": 371,
      "isInvestorParticipation": true,
      "participation": 500,
      "preparation": 73,
      "reward": 195,
      "roi": -129,
      "snipe": Object {
        "fp": 537,
        "roi": -342,
      },
    },
    Object {
      "cumulativeInvestment": 883,
      "expectedParticipation": 190,
      "isInvestorParticipation": false,
      "participation": 190,
      "preparation": 193,
      "reward": 100,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -187,
      },
    },
    Object {
      "cumulativeInvestment": 1006,
      "expectedParticipation": 67,
      "isInvestorParticipation": false,
      "participation": 67,
      "preparation": 249,
      "reward": 35,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -252,
      },
    },
    Object {
      "cumulativeInvestment": 1054,
      "expectedParticipation": 19,
      "isInvestorParticipation": false,
      "participation": 19,
      "preparation": 278,
      "reward": 10,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -277,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 297,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 18,
  "otherInvestment": Array [],
  "totalPreparations": 297,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with investor that secure place with P1 780 instead of 181 and P3 10 instead of 29 1`] = `
Object {
  "cost": 880,
  "investment": Array [
    Object {
      "cumulativeInvestment": 780,
      "expectedParticipation": 181,
      "isInvestorParticipation": true,
      "participation": 780,
      "preparation": 0,
      "reward": 95,
      "roi": -599,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 870,
      "expectedParticipation": 95,
      "isInvestorParticipation": false,
      "participation": 90,
      "preparation": 0,
      "reward": 50,
      "roi": 0,
      "snipe": Object {
        "fp": 50,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 880,
      "expectedParticipation": 29,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 15,
      "roi": 19,
      "snipe": Object {
        "fp": 50,
        "roi": -35,
      },
    },
    Object {
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "preparation": 0,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 0,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 0,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with many investors 1`] = `
Object {
  "cost": 70,
  "investment": Array [
    Object {
      "cumulativeInvestment": 37,
      "expectedParticipation": 19,
      "isInvestorParticipation": true,
      "participation": 33,
      "preparation": 4,
      "reward": 10,
      "roi": -14,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 60,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 17,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 16,
        "roi": -11,
      },
    },
    Object {
      "cumulativeInvestment": 68,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 2,
      "preparation": 23,
      "reward": 0,
      "roi": -2,
      "snipe": Object {
        "fp": 16,
        "roi": -16,
      },
    },
    Object {
      "cumulativeInvestment": 69,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 23,
      "reward": 0,
      "roi": -1,
      "snipe": Object {
        "fp": 16,
        "roi": -16,
      },
    },
    Object {
      "cumulativeInvestment": 70,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 23,
      "reward": 0,
      "roi": -1,
      "snipe": Object {
        "fp": 16,
        "roi": -16,
      },
    },
  ],
  "level": 1,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 20,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with owner that secure place and snipe on P1 1`] = `
Object {
  "cost": 1371,
  "investment": Array [
    Object {
      "cumulativeInvestment": 822,
      "expectedParticipation": 608,
      "isInvestorParticipation": true,
      "participation": 549,
      "preparation": 273,
      "reward": 320,
      "roi": 59,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1126,
      "expectedParticipation": 304,
      "isInvestorParticipation": false,
      "participation": 304,
      "preparation": 273,
      "reward": 160,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -115,
      },
    },
    Object {
      "cumulativeInvestment": 1266,
      "expectedParticipation": 105,
      "isInvestorParticipation": false,
      "participation": 105,
      "preparation": 308,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -220,
      },
    },
    Object {
      "cumulativeInvestment": 1342,
      "expectedParticipation": 29,
      "isInvestorParticipation": false,
      "participation": 29,
      "preparation": 355,
      "reward": 15,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -260,
      },
    },
    Object {
      "cumulativeInvestment": 1361,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 364,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -270,
      },
    },
  ],
  "level": 24,
  "otherInvestment": Array [],
  "totalPreparations": 374,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestmentRange Valid value 1`] = `
Object {
  "global": Object {
    "cost": 2500,
    "totalPreparations": 2025,
  },
  "levels": Array [
    Object {
      "cost": 40,
      "investment": Array [
        Object {
          "cumulativeInvestment": 35,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 30,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 20,
            "roi": -15,
          },
        },
        Object {
          "cumulativeInvestment": 40,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 30,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 20,
            "roi": -15,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 1,
      "otherInvestment": Array [],
      "totalPreparations": 30,
    },
    Object {
      "cost": 60,
      "investment": Array [
        Object {
          "cumulativeInvestment": 50,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 40,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 30,
            "roi": -20,
          },
        },
        Object {
          "cumulativeInvestment": 55,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 40,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 30,
            "roi": -25,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 2,
      "otherInvestment": Array [],
      "totalPreparations": 45,
    },
    Object {
      "cost": 100,
      "investment": Array [
        Object {
          "cumulativeInvestment": 90,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 80,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 50,
            "roi": -40,
          },
        },
        Object {
          "cumulativeInvestment": 95,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 80,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 50,
            "roi": -45,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 3,
      "otherInvestment": Array [],
      "totalPreparations": 85,
    },
    Object {
      "cost": 150,
      "investment": Array [
        Object {
          "cumulativeInvestment": 135,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 120,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -60,
          },
        },
        Object {
          "cumulativeInvestment": 145,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 120,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -65,
          },
        },
        Object {
          "cumulativeInvestment": 150,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 120,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -70,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 120,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 120,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 4,
      "otherInvestment": Array [],
      "totalPreparations": 120,
    },
    Object {
      "cost": 210,
      "investment": Array [
        Object {
          "cumulativeInvestment": 185,
          "expectedParticipation": 25,
          "isInvestorParticipation": false,
          "participation": 25,
          "preparation": 160,
          "reward": 25,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -80,
          },
        },
        Object {
          "cumulativeInvestment": 200,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 160,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -90,
          },
        },
        Object {
          "cumulativeInvestment": 205,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 160,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -100,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 165,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 165,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 5,
      "otherInvestment": Array [],
      "totalPreparations": 165,
    },
    Object {
      "cost": 270,
      "investment": Array [
        Object {
          "cumulativeInvestment": 240,
          "expectedParticipation": 30,
          "isInvestorParticipation": false,
          "participation": 30,
          "preparation": 210,
          "reward": 30,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -105,
          },
        },
        Object {
          "cumulativeInvestment": 255,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 210,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -120,
          },
        },
        Object {
          "cumulativeInvestment": 265,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 215,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -130,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 220,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 220,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 6,
      "otherInvestment": Array [],
      "totalPreparations": 220,
    },
    Object {
      "cost": 330,
      "investment": Array [
        Object {
          "cumulativeInvestment": 295,
          "expectedParticipation": 35,
          "isInvestorParticipation": false,
          "participation": 35,
          "preparation": 260,
          "reward": 35,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -130,
          },
        },
        Object {
          "cumulativeInvestment": 315,
          "expectedParticipation": 20,
          "isInvestorParticipation": false,
          "participation": 20,
          "preparation": 260,
          "reward": 20,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -145,
          },
        },
        Object {
          "cumulativeInvestment": 325,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 265,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -160,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 270,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 270,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 7,
      "otherInvestment": Array [],
      "totalPreparations": 270,
    },
    Object {
      "cost": 380,
      "investment": Array [
        Object {
          "cumulativeInvestment": 340,
          "expectedParticipation": 40,
          "isInvestorParticipation": false,
          "participation": 40,
          "preparation": 300,
          "reward": 40,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -150,
          },
        },
        Object {
          "cumulativeInvestment": 360,
          "expectedParticipation": 20,
          "isInvestorParticipation": false,
          "participation": 20,
          "preparation": 300,
          "reward": 20,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -170,
          },
        },
        Object {
          "cumulativeInvestment": 375,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 310,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -185,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 315,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 315,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 8,
      "otherInvestment": Array [],
      "totalPreparations": 315,
    },
    Object {
      "cost": 450,
      "investment": Array [
        Object {
          "cumulativeInvestment": 405,
          "expectedParticipation": 45,
          "isInvestorParticipation": false,
          "participation": 45,
          "preparation": 360,
          "reward": 45,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -180,
          },
        },
        Object {
          "cumulativeInvestment": 430,
          "expectedParticipation": 25,
          "isInvestorParticipation": false,
          "participation": 25,
          "preparation": 360,
          "reward": 25,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -200,
          },
        },
        Object {
          "cumulativeInvestment": 440,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 360,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -215,
          },
        },
        Object {
          "cumulativeInvestment": 445,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 360,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -220,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 365,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 9,
      "otherInvestment": Array [],
      "totalPreparations": 365,
    },
    Object {
      "cost": 510,
      "investment": Array [
        Object {
          "cumulativeInvestment": 455,
          "expectedParticipation": 55,
          "isInvestorParticipation": false,
          "participation": 55,
          "preparation": 400,
          "reward": 55,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -200,
          },
        },
        Object {
          "cumulativeInvestment": 485,
          "expectedParticipation": 30,
          "isInvestorParticipation": false,
          "participation": 30,
          "preparation": 400,
          "reward": 30,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -225,
          },
        },
        Object {
          "cumulativeInvestment": 500,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 405,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -245,
          },
        },
        Object {
          "cumulativeInvestment": 505,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 405,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -250,
          },
        },
        Object {
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 410,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 10,
      "otherInvestment": Array [],
      "totalPreparations": 410,
    },
  ],
}
`;
